tests/snapshots/fixtures__documented.py.snap
---
source: tests/fixtures.rs
expression: functions
---
[
    Function {
        name: "add",
        params: [
            Param {
                name: "a",
                ty: Int,
            },
            Param {
                name: "b",
                ty: Int,
            },
        ],
        ret: Int,
        body: [
            Return(
                Binary {
                    op: Add,
                    left: Name(
                        "a",
                    ),
                    right: Name(
                        "b",
                    ),
                },
            ),
        ],
        doc: Some(
            "Return the sum of two integers.",
        ),
        span: Span {
            start: 0,
            end: 90,
        },
    },
    Function {
        name: "described",
        params: [
            Param {
                name: "n",
                ty: Int,
            },
        ],
        ret: Int,
        body: [
            Bind {
                name: "doubled",
                ty: Int,
                value: Binary {
                    op: Mul,
                    left: Name(
                        "n",
                    ),
                    right: Literal(
                        Int(
                            2,
                        ),
                    ),
                },
            },
            Return(
                Name(
                    "doubled",
                ),
            ),
        ],
        doc: Some(
            "Scale a value.\n\n    A longer explanation, spanning several lines, with a blank line above.\n    ",
        ),
        span: Span {
            start: 93,
            end: 267,
        },
    },
    Function {
        name: "undocumented",
        params: [
            Param {
                name: "n",
                ty: Int,
            },
        ],
        ret: Int,
        body: [
            Return(
                Name(
                    "n",
                ),
            ),
        ],
        doc: None,
        span: Span {
            start: 270,
            end: 315,
        },
    },
]
